Bug 83501 - Text too long on dialog box linking tables in a query - covering buttons at bottom.
Summary: Text too long on dialog box linking tables in a query - covering buttons at b...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
4.3.0.0.alpha1
Hardware: x86-64 (AMD64) All
: low minor
Assignee: Caolán McNamara
URL:
Whiteboard: target:4.4.0 target:4.3.2
Keywords: regression
: 82316 (view as bug list)
Depends on:
Blocks:
 
Reported: 2014-09-04 14:05 UTC by Tom K. C. Chiu
Modified: 2015-02-10 07:48 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
Screen capture of corrupted screen for text too long. (6.06 KB, image/png)
2014-09-04 14:05 UTC, Tom K. C. Chiu
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Tom K. C. Chiu 2014-09-04 14:05:08 UTC
Created attachment 105746 [details]
Screen capture of corrupted screen for text too long.

When using LibreOffice Base, I tried to link up two tables and select all on one side.  The help text for the difference between left join and right join are too long that they covered up the buttons below.  See screen capture.
Comment 1 Robert Großkopf 2014-09-07 17:17:25 UTC
You have set the version to Windows. I could confirm the same behavior for OpenSUSE 64bit rpm Linux.
All possibilities except "inner Join" in the dialog of a query linking one table to another are to large for the dialog-design.
In all LO-versions before 4.3 the buttons were on the right side of the dialog. Now they are at the bottom and the place isn't big enough for the help-text.

I set the version to LO 4.3.0.0 alpha 1. It fist appears in LO 4.3.0.0alpha1 here - have no alpha0 to test.

Could be this is the wrong component. GUI?
Comment 2 Adolfo Jayme Barrientos 2014-09-07 19:03:53 UTC
That helper text is loaded from a resource file in a way that doesn’t let the .ui dialog recalculate its size to show all of its contents properly.

@Caolán: what do you think it would be the solution here? Maybe wrapping those labels in Glade with the <small> tag (or the equivalent attribute) would help?
Comment 3 Caolán McNamara 2014-09-08 14:50:45 UTC
perfect solution is to loop through all the strings that can appear there and calculate the max size they need, but we can just use the old size and assume that it was "good enough" for a safe quick fix
Comment 4 Commit Notification 2014-09-08 14:55:30 UTC
Caolan McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=3fc1e691c5e14f3b7a2579b563188e814f731cf6

Resolves: fdo#83501 STR_QUERY_* populate the join dialog



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2014-09-09 08:36:04 UTC
Caolan McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-4-3":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=a3de6b662444bafd3b102b6991866ed4c7206965&h=libreoffice-4-3

Resolves: fdo#83501 STR_QUERY_* populate the join dialog


It will be available in LibreOffice 4.3.2.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 6 Adolfo Jayme Barrientos 2015-02-10 07:48:42 UTC
*** Bug 82316 has been marked as a duplicate of this bug. ***