Resolves: fdo#83501 STR_QUERY_* populate the join dialog

(cherry picked from commit 3fc1e691c5e14f3b7a2579b563188e814f731cf6)

Change-Id: Id4cff969297009c9f9cd3323ac01c743b29ca6c4